--- a/managementApp/src/app/pages/login/login.page.html
+++ b/managementApp/src/app/pages/login/login.page.html
@@ -4,9 +4,9 @@
   </ion-toolbar>
 </ion-header>
 
-<ion-content padding>
+<ion-content class="ion-padding">
 
-  <div slot="fixed">
+  <div class="ion-fixed">
     <ion-row>
       <ion-col size="12" size-sm="10" offset-sm="1" size-md="8" offset-md="2" size-lg="6" offset-lg="3" size-xl="4" offset-xl="4">
 
