[annah] created news and users pages for admin to see, not done yet, just done for the day

--- a/managementApp/src/app/pages/admin-tabs/admin-tabs.page.html
+++ b/managementApp/src/app/pages/admin-tabs/admin-tabs.page.html
@@ -1,9 +1,15 @@
-<ion-header>
-  <ion-toolbar>
-    <ion-title>adminTabs</ion-title>
-  </ion-toolbar>
-</ion-header>
+<ion-tabs>
+  <ion-tab-bar slot="bottom">
 
-<ion-content>
+    <ion-tab-button tab="users">
+      <ion-icon name="people"></ion-icon>
+      <ion-label>User Management</ion-label>
+    </ion-tab-button>
 
-</ion-content>
+    <ion-tab-button tab="news">
+      <ion-icon name="paper"></ion-icon>
+      <ion-label>News</ion-label>
+    </ion-tab-button>
+
+  </ion-tab-bar>
+</ion-tabs>
