--- a/managementApp/src/app/pages/admin-tabs/admin-tabs.page.html
+++ b/managementApp/src/app/pages/admin-tabs/admin-tabs.page.html
@@ -7,7 +7,7 @@
     </ion-tab-button>
 
     <ion-tab-button tab="news">
-      <ion-icon name="paper"></ion-icon>
+      <ion-icon name="paper-plane"></ion-icon>
       <ion-label>News</ion-label>
     </ion-tab-button>
 
